# ExceptionSnippets

./: 001_main.cpp  002_main.cpp  003_main.cpp  004_person_test.cpp  Makefile
Person/: CMakeLists.txt  Person.cpp  Person.h  main.cpp
